fix: begin utilizing new expression templates to simplify operators

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -7,6 +7,7 @@
 set(common_headers
     boundary_condition.hpp
     common.hpp
+    expression_templates.hpp
     finite_element_state.hpp
     initialize.hpp
     serac_types.hpp
