fix: use pre-installed versions of python/sphinx to reduce build time

--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
@@ -92,6 +92,15 @@ packages:
    paths:
       tar: /usr
    buildable: False
+  python:
+    paths:
+      python@3.8.2: /usr/tce/packages/python/python-3.8.2
+    buildable: False
+  py-sphinx:
+    version: [2.2.0]
+    paths:
+      py-sphinx@2.2.0: /usr/tce/packages/python/python-3.8.2/
+    buildable: False
 
 # Globally lock in version of CMake
   cmake:
