--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -4,11 +4,11 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-blt_add_executable( NAME       serac
+blt_add_executable( NAME       serac_driver
                     SOURCES    serac.cpp
                     DEPENDS_ON common solvers coefficients mfem mpi cli11
                     )
 
-install( TARGETS serac
+install( TARGETS serac_driver
          RUNTIME DESTINATION bin
          )
