tests: add a test to make sure that external projects can use serac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,12 @@ if(ENABLE_TESTS)
 endif()
 
 #------------------------------------------------------------------------------
+# Configure examples
+#------------------------------------------------------------------------------
+
+add_subdirectory(examples)
+
+#------------------------------------------------------------------------------
 # Add Code Checks
 #------------------------------------------------------------------------------
 
