--- a/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
@@ -7,79 +7,99 @@ packages:
       lapack: [openblas]
       gl: [opengl]
       glu: [openglu]
+
 # Lock down versions of packages we depend on
   opengl:
-    paths:
-      opengl@1.0.0: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: opengl@1.0.0
+      prefix: /usr
   openglu:
-    paths:
-      openglu@1.3.1: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: openglu@1.3.1
+      prefix: /usr
   bzip2:
-   paths:
-      bzip2: /
-   buildable: False
+    buildable: false
+    externals:
+    - spec: bzip2
+      prefix: /
   gettext:
-   paths:
-      gettext: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: gettext
+      prefix: /usr
   perl:
-    paths:
-      perl: /usr
-    buildable: False 
+    buildable: false
+    externals:
+    - spec: perl
+      prefix: /usr
   tar:
-    paths:
-      tar: /
-    buildable: False
+    buildable: false
+    externals:
+    - spec: tar
+      prefix: /
   libx11:
-    paths:
-      libx11: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: libx11
+      prefix: /usr
   autoconf:
-    paths:
-      autoconf: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: autoconf
+      prefix: /usr
   flex:
-    paths:
-      flex: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: flex
+      prefix: /usr
   openmpi:
-    paths:
-      openmpi: /usr
+    externals:
+    - spec: openmpi
+      prefix: /usr
   openssl:
-    paths:
-      openssl: /usr/lib/x86_64-linux-gnu/
+    externals:
+    - spec: openssl
+      prefix: /usr/lib/x86_64-linux-gnu/
   openblas:
-    paths:
-      openblas: /usr/lib/x86_64-linux-gnu/
-    buildable: False
+    buildable: false
+    externals:
+    - spec: openblas
+      prefix: /usr/lib/x86_64-linux-gnu/
   mpich:
-    paths:
-      mpich@3.3a2%gcc@8.4.0: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: mpich@3.3a2%gcc@8.4.0
+      prefix: /usr
   cmake:
-    paths:
-      cmake@3.10.2: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: cmake@3.10.2
+      prefix: /usr
+
 # Lock in versions of Devtools
   cppcheck:
     version: [1.82]
-    paths:
-      cppcheck: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: cppcheck
+      prefix: /usr
   doxygen:
     version: [1.8.13]
-    paths:
-      doxygen: /usr
-    buildable: False   
+    buildable: false
+    externals:
+    - spec: doxygen
+      prefix: /usr
   python:
     version: [3.6.9]
-    paths:
-      python: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: python
+      prefix: /usr
   py-sphinx:
     version: [1.6.7]
-    paths:
-      py-sphinx: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: py-sphinx
+      prefix: /usr
