--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
@@ -24,87 +24,100 @@ packages:
       lapack: [netlib-lapack]
       mpi: [mvapich2]
   cuda:
-    buildable: False
+    buildable: false
   mvapich2:
-    buildable: False
+    buildable: false
   openmpi:
-    buildable: False
+    buildable: false
   mpich:
-    buildable: False
+    buildable: false
   spectrum-mpi:
-    buildable: False
+    buildable: false
   charmpp:
-    buildable: False
+    buildable: false
   charm:
-    buildable: False
+    buildable: false
   intel-mpi:
-    buildable: False
+    buildable: false
   intel-parallel-studio:
-    buildable: False
+    buildable: false
   fujitsu-mpi:
-    buildable: False
+    buildable: false
   mpilander:
-    buildable: False
+    buildable: false
   mpt:
-    buildable: False
+    buildable: false
 
   # blas is a bit more complicated because its a virtual package so fake it with
   # the following per spack docs
   netlib-lapack:
-    paths:
-      netlib-lapack@3.6.1: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: netlib-lapack@3.6.1
+      prefix: /usr
 
 # System level packages to not build
   autoconf:
-    paths:
-      autoconf: /usr
-    buildable: False 
+    buildable: false
+    externals:
+    - spec: autoconf
+      prefix: /usr
   automake:
-    paths:
-      automake: /usr
-    buildable: False
+    buildable: false
+    externals:
+    - spec: automake
+      prefix: /usr
   bzip2:
-   paths:
-      bzip2: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: bzip2
+      prefix: /usr
   gettext:
-   paths:
-      gettext: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: gettext
+      prefix: /usr
   libtool:
-   paths:
-      libtool: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: libtool
+      prefix: /usr
   m4:
-   paths:
-      m4: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: m4
+      prefix: /usr
   perl:
-    paths:
-      perl: /usr
-    buildable: False 
+    buildable: false
+    externals:
+    - spec: perl
+      prefix: /usr
   pkg-config:
-    paths:
-      pkg-config: /usr
-    buildable: False 
+    buildable: false
+    externals:
+    - spec: pkg-config
+      prefix: /usr
   tar:
-   paths:
-      tar: /usr
-   buildable: False
+    buildable: false
+    externals:
+    - spec: tar
+      prefix: /usr
   python:
-    paths:
-      python@3.8.2: /usr/tce/packages/python/python-3.8.2
-    buildable: False
+    buildable: false
+    externals:
+    - spec: python@3.8.2
+      prefix: /usr/tce/packages/python/python-3.8.2
   py-sphinx:
     version: [2.2.0]
-    paths:
-      py-sphinx@2.2.0: /usr/tce/packages/python/python-3.8.2/
-    buildable: False
+    buildable: false
+    externals:
+    - spec: py-sphinx@2.2.0
+      prefix: /usr/tce/packages/python/python-3.8.2/
 
 # Globally lock in version of CMake
   cmake:
     version: [3.14.5]
-    paths:
-      cmake: /usr/tce/packages/cmake/cmake-3.14.5
-    buildable: False
+    buildable: false
+    externals:
+    - spec: cmake
+      prefix: /usr/tce/packages/cmake/cmake-3.14.5
