--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,8 +17,9 @@ if (ENABLE_GTEST)
         serac_linelastic_solver.cpp
         serac_quasistatic_solver.cpp
         serac_thermal_solver.cpp
-	serac_thermal_structural_solver.cpp
-        serac_dtor.cpp)
+	    serac_thermal_structural_solver.cpp
+        serac_dtor.cpp
+        serac_boundary_cond.cpp)
 
     foreach(filename ${solver_tests})
         get_filename_component(test_name ${filename} NAME_WE)
