--- a/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -1,4 +1,3 @@
-
 # -------------------------------------------------------------------------
 # This file controls default concretization preferences for Spack.
 #
@@ -30,8 +29,7 @@ packages:
       mpe: [mpe2]
       # IBM Spectrum MPI is the only supported MPI 
       # library on LC's Sierra and CORAL EA systems.
-      # Using mvapich2 due to spack issue #4119
-      mpi: [mvapich2]
+      mpi: [spectrum-mpi]
       opencl: [pocl]
       openfoam: [openfoam-com, openfoam-org, foam-extend]
       pil: [py-pillow]
@@ -46,110 +44,103 @@ packages:
   py-numpy:
     variants: ~blas~lapack
   perl:
-    buildable: False
+    buildable: false
     externals:
     - spec: perl
       prefix: /usr
   pkg-config:
-    buildable: False
+    buildable: false
     externals:
     - spec: pkg-config
       prefix: /usr
-# LLNL blueos CUDA
+
+  # LLNL blueos CUDA
   cuda:
     externals:
       - spec: cuda@11.0.182
         prefix: /usr/tce/packages/cuda/cuda-11.0.182
       - spec: cuda@11.0.2
         prefix: /usr/tce/packages/cuda/cuda-11.0.2
-    buildable: False
-# LLNL blueos mpi
+    buildable: false
+
+  # LLNL blueos mpi
+  mpi:
+    buildable: false
   spectrum-mpi:
     externals:
-      - spec: spectrum-mpi@release%gcc@4.9.3
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-gcc-4.9.3/ 
-      - spec: spectrum-mpi@release%clang@coral
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-upstream-2018.12.03/
-      - spec: spectrum-mpi@release%xl@coral
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-xl-2018.11.26/ 
-    buildable: False
+      - spec: spectrum-mpi@release%clang@upstream_gfortran
+        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-upstream-2019.08.15
 
+  # System level packages to not build
   autoconf:
     externals:
       - spec: autoconf
         prefix: /usr
-    buildable: False 
+    buildable: false 
   automake:
     externals:
       - spec: automake
         prefix: /usr
-    buildable: False
+    buildable: false
   bzip2:
     externals:
       - spec: bzip2
         prefix: /usr
-    buildable: False
-  cmake:
-    externals:
-    - spec: cmake@3.18.0
-      prefix: /usr/tce/packages/cmake/cmake-3.18.0
-    buildable: False
+    buildable: false
   gettext:
     externals:
       - spec: gettext
         prefix: /usr
-    buildable: False
+    buildable: false
   libtool:
     externals:
       - spec: libtool
         prefix: /usr
-    buildable: False
+    buildable: false
   m4:
     externals:
       - spec: m4
         prefix: /usr
-    buildable: False
+    buildable: false
   tar:
     externals:
       - spec: tar
         prefix: /usr
-    buildable: False
-  mvapich2:
-    externals:
-      - spec: mvapich2%clang
-        prefix: /usr/tce/packages/mvapich2/mvapich2-2020.01.09-clang-ibm-2019.10.03/
-      - spec: mvapich2%xl@coral
-        prefix: /usr/tce/packages/mvapich2/mvapich2-2020.01.09-xl-2020.06.25
-    buildable: False
+    buildable: false
   netlib-lapack:
     externals:
-      # This is the one that has the trailing underscores, needed for MFEM compat
+      # This is the one that has the trailing underscores in name mangling, needed for MFEM compat
       - spec: netlib-lapack@3.9.0
         prefix: /usr/tcetmp/packages/lapack/lapack-3.9.0-gcc-7.3.1/lib/
-    buildable: False
+    buildable: false
 
-# Lock in versions of Devtools
+  # Lock in versions of Devtools
+  cmake:
+    externals:
+    - spec: cmake@3.18.0
+      prefix: /usr/tce/packages/cmake/cmake-3.18.0
+    buildable: false
   cppcheck:
-    version: [1.87]
+    version: [2.1]
     externals:
-      - spec: cppcheck@1.87
-        prefix: /usr/WS2/smithdev/devtools/blueos_3_ppc64le_ib_p9/latest/cppcheck-1.87
-    buildable: False
+      - spec: cppcheck@2.1
+        prefix: /usr/WS2/smithdev/devtools/blueos_3_ppc64le_ib_p9/latest/cppcheck-2.1
+    buildable: false
   doxygen:
-    version: [1.8.14]
+    version: [1.8.17]
     externals:
-      - spec: doxygen@1.8.14
-        prefix: /usr/WS2/smithdev/devtools/blueos_3_ppc64le_ib_p9/latest/doxygen-1.8.14
-    buildable: False
+      - spec: doxygen@1.8.17
+        prefix: /usr/WS2/smithdev/devtools/blueos_3_ppc64le_ib_p9/latest/doxygen-1.8.17
+    buildable: false
   python:
     version: [3.8.2]
     externals:
       - spec: python@3.8.2
         prefix: /usr/tce/packages/python/python-3.8.2/
-    buildable: False
+    buildable: false
   py-sphinx:
     version: [2.2.0]
     externals:
       - spec: py-sphinx@2.2.0
         prefix: /usr/tce/packages/python/python-3.8.2/
-    buildable: False
+    buildable: false
