ci: attempt to add new script for building Azure CI
fix: correct path to new script

fix: execute permissions on build_src script

fix: let directory be figured out by script

fix: actually create build directory

fix: don't try to write build info?

fix: use hostconfig path for hostconfig

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,8 +36,8 @@ jobs:
     clean: true
     submodules: recursive
   - script:  |
-      echo " -e $TEST_TARGET -e $COMPILER -e $DO_BUILD -e $DO_TEST -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-build_and_test.sh"
-      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_BUILD -e DO_TEST -e DO_CLEAN -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-build_and_test.sh
+      echo " -e $TEST_TARGET -e $COMPILER -e $DO_BUILD -e $DO_TEST -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/llnl/build_src.py --host-config $HOST_CONFIG"
+      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e COMPILER -e DO_BUILD -e DO_TEST -e DO_CLEAN -e HOST_CONFIG -e CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./serac/scripts/llnl/build_src.py --host-config $HOST_CONFIG
 
     displayName: '$(TEST_TARGET) Build & Test'
   - task: PublishTestResults@2
