--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,14 +40,10 @@ stages:
     - JOBID=$(squeue -h --name=${PROJECT_ALLOC_NAME} --format=%A)
     - ASSIGN_ID=$(if [[ -n "${JOBID}" ]]; then echo "--jobid=${JOBID}"; fi)
     - EXEC_PREFIX="srun ${SLURM_ACCOUNT} ${ASSIGN_ID}"
-    #BUILD
-    - RESOURCES="-t 5 -N 1"
-    - echo -e "Build ${CI_PROJECT_NAME}"
-    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --build-only
-    #TEST
-    - RESOURCES="-t 5 -N 1"
-    - echo -e "Test ${CI_PROJECT_NAME}"
-    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --test-only
+   #BUILD + TEST
+    - RESOURCES="-t 10 -N 1"
+    - echo -e "Build and test ${CI_PROJECT_NAME}"
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_src.py --host-config ${HOST_CONFIG}
 
 .srun_build_with_deps_script:
   script:
@@ -59,14 +55,10 @@ stages:
       Build dependencies and generate host-config file (uberenv)"
     - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_tpls.py --spec=${SPEC} --directory=${CI_PROJECT_NAME}
     - echo -e "section_end:$(date +%s):dependencies\r\e[0K"
-    #BUILD
-    - RESOURCES="-t 5 -N 1"
-    - echo -e "Build ${CI_PROJECT_NAME}"
-    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --build-only
-    #TEST
-    - RESOURCES="-t 5 -N 1"
-    - echo -e "Test ${CI_PROJECT_NAME}"
-    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --test-only
+    #BUILD + TEST
+    - RESOURCES="-t 10 -N 1"
+    - echo -e "Build and test ${CI_PROJECT_NAME}"
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_src.py
 
 .srun_build_devtools_script:
   script:
@@ -81,13 +73,9 @@ stages:
 
 .build_blueos_3_ppc64le_ib_p9_script:
   script:
-    #BUILD
-    - echo -e "Build ${CI_PROJECT_NAME}"
-    - lalloc 1 -W 5 ${LSF_ACCOUNT} scripts/gitlab/build_and_test.sh --build-only
-    - echo -e "section_end:$(date +%s):build\r\e[0K"
-    #TEST
-    - echo -e "Test ${CI_PROJECT_NAME}"
-    - lalloc 1 -W 5 ${LSF_ACCOUNT} scripts/gitlab/build_and_test.sh --test-only
+    #BUILD + TEST
+    - echo -e "Build and test ${CI_PROJECT_NAME}"
+    - lalloc 1 -W 10 ${LSF_ACCOUNT} scripts/llnl/build_src.py --host-config ${HOST_CONFIG}
 
 .build_with_deps_blueos_3_ppc64le_ib_p9_script:
   script:
@@ -95,12 +83,9 @@ stages:
     #DEPENDENCIES
     - echo -e "Build dependencies and generate host-config file (uberenv)"
     - lalloc 1 -W 20 ${LSF_ACCOUNT} scripts/gitlab/build_and_test.sh --deps-only
-    #BUILD
-    - echo -e "Build ${CI_PROJECT_NAME}"
-    - lalloc 1 -W 5 ${LSF_ACCOUNT} scripts/gitlab/build_and_test.sh --build-only
-    #TEST
-    - echo -e "Test ${CI_PROJECT_NAME}"
-    - lalloc 1 -W 5 ${LSF_ACCOUNT} scripts/gitlab/build_and_test.sh --test-only
+    #BUILD + TEST
+    - echo -e "Build and test ${CI_PROJECT_NAME}"
+    - lalloc 1 -W 10 ${LSF_ACCOUNT} scripts/llnl/build_src.py
 
 # This is where jobs are included
 include:
