--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,14 +19,14 @@ jobs:
           CMAKE_EXTRA_FLAGS: ''
           COMPILER: 'g++'
           TEST_TARGET: 'linux_gcc8'
-          HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0'
+          HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0.cmake'
       linux_clang10:
           VM_ImageName: 'ubuntu-18.04'
           Compiler_ImageName: 'seracllnl/tpls:clang-10'
           CMAKE_EXTRA_FLAGS: ''
           COMPILER: 'clang++'
           TEST_TARGET: 'linux_clang10'
-          HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
+          HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0.cmake'
 
   pool:
     vmImage: $(VM_ImageName)
