--- a/scripts/uberenv/spack_configs/linux_ubuntu_20/compilers.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_20/compilers.yaml
@@ -6,7 +6,8 @@ compilers:
       cxx: /usr/bin/g++
       f77: /usr/bin/gfortran
       fc: /usr/bin/gfortran
-    flags: {}
+    flags: 
+      ldlibs: -lpthread
     operating_system: ubuntu20.04
     target: x86_64
     modules: []
