--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ stages:
     - RESOURCES="-t 10 -N 1"
     - echo -e "section_start:$(date +%s):build_and_test\r\e[0K
       Build and test ${CI_PROJECT_NAME}"
+    # Autodetects hostconfig created by build_tpls
     - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_src.py
     - echo -e "section_end:$(date +%s):build_and_test\r\e[0K"
 
