Add new clang with builtin gcc 8.3.1 std lib

--- a/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/compilers.yaml
+++ b/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/compilers.yaml
@@ -1,5 +1,4 @@
 compilers:
-# This is the one that works
 - compiler:
     environment:
       # Temporary workaround: Spack issue #18156
@@ -25,4 +24,26 @@ compilers:
       f77: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
       fc: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
     spec: clang@upstream_gfortran
+    target: ppc64le
+
+# This compiler is only present on rzansel as a proof of concept
+# before it gets rolled out fully
+- compiler:
+    environment:
+      # Temporary workaround: Spack issue #18156
+      set:
+        SPACK_TARGET_ARGS: ""
+    extra_rpaths: []
+    flags:
+      # Required as spack cannot recognize compiler-specific linker
+      # flags in mixed toolchains
+      ldlibs: -lgfortran
+    modules: []
+    operating_system: rhel7
+    paths:
+      cc:  /usr/tce/packages/clang/clang-ibm-2019.10.03-gcc-8.3.1/bin/clang
+      cxx: /usr/tce/packages/clang/clang-ibm-2019.10.03-gcc-8.3.1/bin/clang++
+      f77: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
+      fc:  /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
+    spec: clang@ibm_gfortran
     target: ppc64le
