--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -50,32 +50,26 @@ release_resources_build_quartz:
 
 ####
 # Build jobs
-clang_9_0_0 (PR build_on_quartz):
+clang_10_0_0 (PR build_on_quartz):
   variables:
-    COMPILER: "clang@9.0.0"
-    HOST_CONFIG: "quartz-toss_3_x86_64_ib-clang@9.0.0.cmake"
+    COMPILER: "clang@10.0.0"
+    HOST_CONFIG: "quartz-toss_3_x86_64_ib-${COMPILER}.cmake"
   extends: .pr_build_on_quartz
 
-gcc_8_1_0 (PR build_on_quartz):
+gcc_8_3_1 (PR build_on_quartz):
   variables:
-    COMPILER: "gcc@8.1.0"
-    HOST_CONFIG: "quartz-toss_3_x86_64_ib-gcc@8.1.0.cmake"
+    COMPILER: "gcc@8.3.1"
+    HOST_CONFIG: "quartz-toss_3_x86_64_ib-${COMPILER}.cmake"
   extends: .pr_build_on_quartz
 
-clang_9_0_0 (Main build_with_deps_on_quartz):
+clang_10_0_0 (Main build_with_deps_on_quartz):
   variables:
-    COMPILER: "clang@9.0.0"
+    COMPILER: "clang@10.0.0"
     SPEC: "@develop%${COMPILER}"
   extends: .main_build_with_deps_on_quartz
 
-gcc_8_1_0 (Main build_with_deps_on_quartz):
+gcc_8_3_1 (Main build_with_deps_on_quartz):
   variables:
-    COMPILER: "gcc@8.1.0"
+    COMPILER: "gcc@8.3.1"
     SPEC: "@develop%${COMPILER}"
   extends: .main_build_with_deps_on_quartz
-
-gcc_8_1_0 (Main build_devtools_on_quartz):
-  variables:
-    COMPILER: "gcc@8.1.0"
-    SPEC: "@develop%${COMPILER}"
-  extends: .main_build_devtools_on_quartz
