--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -35,6 +35,7 @@ if(NOT SERAC_FOUND)
   set(SERAC_USE_MPI            "@SERAC_USE_MPI@")
   set(SERAC_USE_TRIBOL         "@SERAC_USE_TRIBOL@")
   set(SERAC_USE_CALIPER        "@SERAC_USE_CALIPER@")
+  set(SERAC_USE_PETSC          "@SERAC_USE_PETSC@")
 
   #----------------------------------------------------------------------------
   # Bring in required  dependencies for this serac configuration
@@ -85,6 +86,15 @@ if(NOT SERAC_FOUND)
       set(CALIPER_DIR ${SERAC_CALIPER_DIR}) 
     endif()
     find_dependency(caliper REQUIRED NO_DEFAULT_PATH PATHS "${CALIPER_DIR}")
+  endif()
+
+  # petsc
+  if(SERAC_USE_PETSC)
+    set(SERAC_PETSC_DIR     "@PETSC_DIR@")
+    if(NOT PETSC_DIR)
+      set(PETSC_DIR ${SERAC_PETSC_DIR})
+    endif()
+    # Note: Targets not currently imported
   endif()
 
 
