--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -56,7 +56,8 @@ if (ENABLE_GTEST)
 
     set(language_tests
         copy_elision.cpp
-        mfem_array_std_algo.cpp)
+        mfem_array_std_algo.cpp
+        expr_templates.cpp)
 
     foreach(filename ${language_tests})
         get_filename_component(test_name ${filename} NAME_WE)
@@ -71,22 +72,6 @@ if (ENABLE_GTEST)
                      NUM_MPI_TASKS 1 )
     endforeach()
 
-    set(utility_tests
-        expr_templates.cpp)
-
-    foreach(filename ${utility_tests})
-        get_filename_component(test_name ${filename} NAME_WE)
-
-        blt_add_executable(NAME        ${test_name}
-                           SOURCES     ${filename}
-                           OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                           DEPENDS_ON  ${test_dependencies}
-                           FOLDER      serac/tests )
-        blt_add_test(NAME          ${test_name}
-                     COMMAND       ${test_name}
-                     NUM_MPI_TASKS 4 )
-    endforeach()
-
     if(ENABLE_CUDA)
         # CUDA smoke test
         blt_add_library( NAME       serac_cuda_smoketest_kernel
@@ -99,6 +84,16 @@ if (ENABLE_GTEST)
                             FOLDER      serac/tests)
         blt_add_test( NAME          serac_cuda_smoketest
                       COMMAND       serac_cuda_smoketest )
+    endif()
+
+    if(ENABLE_BENCHMARKS)
+        blt_add_executable( NAME    benchmark_expr_templates
+                            SOURCES benchmark_expr_templates.cpp
+                            DEPENDS_ON gbenchmark ${test_dependencies}
+                            FOLDER      serac/tests)
+        blt_add_benchmark(  NAME    benchmark_expr_templates
+                            COMMAND benchmark_expr_templates "--benchmark_min_time=0.0 --v=3 --benchmark_format=console"
+                            NUM_MPI_TASKS 4)
     endif()
 
 endif()
