build: add location of PETSc on Lassen

--- a/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -115,6 +115,10 @@ packages:
       - spec: netlib-lapack@3.9.0
         prefix: /usr/tcetmp/packages/lapack/lapack-3.9.0-gcc-7.3.1/lib/
     buildable: false
+  petsc:
+    externals:
+      - spec: petsc@3.13.0
+        prefix: /usr/tcetmp/packages/petsc/petsc-3.13.0/lib/
 
   # Lock in versions of Devtools
   cmake:
